# specz

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  railway.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/lib/: auth.py  email.py  magic_link.py
backend/app/prompts/: __init__.py  check.py  generate.py  specz.py
backend/app/routes/: auth.py  chat.py  generate.py  specs.py
backend/tests/: conftest.py  test_auth.py
frontend/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  Header.tsx  ProtectedRoute.tsx  SpecView.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  textarea.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Auth.tsx  Home.tsx  SpecDetail.tsx  SpecList.tsx  SpeczCheck.tsx
