[project]
name = "specz-backend"
version = "0.1.0"
description = "Specz API — AI-powered software specification generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "mistralai>=1.0.0",
    "resend>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/routes/*.py" = ["B008"]
"app/dependencies.py" = ["B008"]
"app/prompts/*.py" = ["E501"]
"app/lib/email.py" = ["E501"]
